# prysm_backend

./: .cache  .env.example  .gitignore  README.md  alembic.ini  prysm.db  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
alembic/: env.py
app/: __init__.py  auth.py  config.py  database.py  main.py  storage.py
config/: aws.yaml  base.yaml  bigquery_schemas.py  config.yaml  development.yaml  production.yaml  staging.yaml  storage.yaml
data/: personalize_interactions_20250204_192707.csv
kubernetes/: deployment.yaml
recommender/: main.py  recommendation_engine.py
scripts/: cleanup_storage.py  create_google_token.py  create_linkedin_token.py  create_spotify_token.py  extract_google_traits.py  extract_linkedin_traits.py  extract_spotify_traits.py  fix_db_connection.py  generate_personalize_interactions.py  generate_test_interactions.py  get_spotify_test_tokens.py  init_bigquery.py  init_storage.py  monitor_storage.py  prepare_personalize_upload.py  run_end_to_end.py  setup_feature_groups.py  setup_personalize.py  test_event_collection.py  test_eventbrite_scraper.py  test_facebook_scraper.py  test_feature_ingestion.py  test_google_oauth_flow.py  test_meetup_scraper.py  test_nlp_credentials.py  test_personalize_integration.py  test_recommendations.py  test_storage.py  verify_aws_setup.py  verify_linkedin_traits.py  verify_oauth_tokens.py  verify_personalize_data.py
terraform/: iam.tf  terraform.tfstate  variables.tf
tests/: __init__.py  bigquery_schema_test.py  conftest.py  data_aggregation_test.py  data_processing_test.py  (+53 more)
(+247 files in other folders)
