[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prysm_backend"
version = "0.1.0"
description = "Backend for the Prysm recommendation engine"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "httpx",
    "python-jose[cryptography]",
    "python-multipart",
    "pydantic",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pyright]
include = ["app"]
extraPaths = ["app"]
venvPath = "."
venv = "venv" 